--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
@@ -6,15 +6,11 @@ android {
     compileSdkVersion compile_sdk_version
 
     defaultConfig {
-        applicationId "gvfiqst.tontestapp"
-
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
 
-        versionCode 1
-        versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles 'consumer-rules.pro'
     }
 
     buildTypes {
@@ -29,9 +25,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(':presentation')
     implementation project(':domain')
-    implementation project(':data')
 
     implementation kotlinStdLib
     implementation 'androidx.appcompat:appcompat:1.1.0'
