Add koin dependencies

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -5,6 +5,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation kotlinStdLib
+    implementation kotlinCoroutinesCore
+
+    implementation koinCore
 }
 
 buildscript {
