--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion compile_sdk_version
 
     defaultConfig {
-        applicationId "gvfiqst.tontestapp"
+        applicationId "com.gvfiqst.tontestapp"
 
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
@@ -24,6 +24,14 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -34,6 +42,11 @@ dependencies {
     implementation project(':data')
 
     implementation kotlinStdLib
+
+    implementation koinCore
+    implementation koinFragment
+    implementation koinViewModel
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.1'
     testImplementation 'junit:junit:4.12'
