--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="gvfiqst.tontestapp">
+    package="com.gvfiqst.tontestapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
