--- a/data/build.gradle
+++ b/data/build.gradle
@@ -20,6 +20,14 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -28,8 +36,11 @@ dependencies {
     implementation project(':domain')
 
     implementation kotlinStdLib
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation kotlinCoroutinesCore
+    implementation kotlinCoroutinesAndroid
+
+    implementation koinCore
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
