Set up Retrofit, add apis

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
     }
 
     buildTypes {
+        all {
+            buildConfigField 'String', 'API_URL', '"http://www.omdbapi.com/"'
+            buildConfigField 'String', 'API_KEY', '"50dc75c9"' // yeah I know it's insecure...
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
