--- a/data/build.gradle
+++ b/data/build.gradle
@@ -41,6 +41,12 @@ dependencies {
 
     implementation koinCore
 
+    implementation okhttp
+    implementation okhttpLogger
+    implementation retrofit
+    implementation retrofitGson
+    implementation gson
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
