--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 android {
     compileSdkVersion compile_sdk_version
@@ -38,9 +39,11 @@ dependencies {
     implementation kotlinStdLib
     implementation kotlinCoroutinesCore
     implementation kotlinCoroutinesAndroid
+    implementation kotlinKtx
 
     implementation appCompat
-    implementation kotlinKtx
+    implementation navFragment
+    implementation navUi
 
     implementation koinCore
     implementation koinFragment
