--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -27,6 +27,7 @@ ext {
     koinCore = "org.koin:koin-core:$koin_version"
     koinFragment = "org.koin:koin-androidx-fragment:$koin_version"
     koinViewModel = "org.koin:koin-androidx-viewmodel:$koin_version"
+    koinAndroidScope = "org.koin:koin-androidx-scope:$koin_version"
 
     // Retrofit
     retrofit_version = '2.8.1'
