--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation koinCore
     implementation koinFragment
     implementation koinViewModel
+    implementation koinAndroidScope
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
