--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 android {
@@ -44,6 +45,13 @@ dependencies {
     implementation appCompat
     implementation navFragment
     implementation navUi
+
+    implementation recyclerView
+    implementation constraintLayout
+    implementation cardView
+
+    implementation glide
+    kapt glideCompiler
 
     implementation koinCore
     implementation koinFragment
